--- a/css/custom.css
+++ b/css/custom.css
@@ -171,7 +171,7 @@ label {}
     margin: 0 auto;
     position: relative;
 }
-
+/*
 .logo {
     width: 256px;
     height: 256px;
@@ -185,7 +185,7 @@ label {}
 .logo img {
     animation: spin 4s infinite linear;
 }
-
+*/
 
 /* Bootstrap */
 
