--- a/html.html.twig
+++ b/html.html.twig
@@ -74,6 +74,7 @@
 
     {{ attach_library('drupal8_bootstrap_subtheme/style_rtl') }}
 
+
       {# attach_library('your_theme_name/styles_rtl') #}
 
       <!--<link rel="stylesheet" type="text/css" media="all" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.4.0/css/bootstrap-rtl.min.css"> -->
@@ -81,11 +82,8 @@
     {%- endif -%}
 
 
-
-    <script>
-    new WOW().init();
-    </script>
-
+    {{ attach_library('drupal8_bootstrap_subtheme/wow_css') }}
+    {{ attach_library('drupal8_bootstrap_subtheme/wow_js') }}
 
   </head>
   <body{{ attributes.addClass(body_classes) }}>
