--- a/page.html.twig
+++ b/page.html.twig
@@ -92,6 +92,18 @@
   {% endblock %}
 {% endif %}
 
+
+
+<div>
+
+{{ page.slider }}
+
+</div>
+
+
+
+
+
 {# Main #}
 {% block main %}
   <div role="main" class="main-container {{ container }} js-quickedit-main-content">
