--- a/html.html.twig
+++ b/html.html.twig
@@ -89,6 +89,10 @@
     {{ page_top }}
     {{ page }}
     {{ page_bottom }}
+
+    <div id="backtotop" class="wow pulse"><i class="fa fa-arrow-up"></i></div>
+
+
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
 </html>
