--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -171,6 +171,10 @@
   </div>
 {% endblock %}
 
+
+<div id="backtotop" class="wow pulse"><i class="fa fa-arrow-up"></i></div>
+
+
 {% if page.footer %}
   {% block footer %}
     <footer class="footer {{ container }} wow slideInUp" role="contentinfo">
