--- a/css/custom_ltr.css
+++ b/css/custom_ltr.css
@@ -6,13 +6,12 @@
 
   font-family: 'Roboto', sans-serif;
 
-  /*
-  google  fonts
+/*
+other  google  fonts
 
   font-family: 'Open Sans', sans-serif;
   font-family: 'Lato', sans-serif;
   font-family: 'Raleway', sans-serif;
-
-
+*/
 
 }
