--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ https://www.canva.com/color-palette/
 */
 
 @import url("fonts.css");
+@import url("nav.css");
+
 @import url("//use.fontawesome.com/releases/v5.7.2/css/all.css");
 
 
