--- a/css/custom_ltr.css
+++ b/css/custom_ltr.css
@@ -9,9 +9,11 @@
 /*
 other  google  fonts
 
-  font-family: 'Open Sans', sans-serif;
-  font-family: 'Lato', sans-serif;
-  font-family: 'Raleway', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Raleway', sans-serif;
+font-family: 'Ubuntu', sans-serif;
+
 */
 
 }
