--- a/css/fonts.css
+++ b/css/fonts.css
@@ -73,3 +73,4 @@ https://google-webfonts-helper.herokuapp.com/fonts
 @import url("//fonts.googleapis.com/css?family=Open+Sans");
 @import url("//fonts.googleapis.com/css?family=Lato");
 @import url("//fonts.googleapis.com/css?family=Raleway");
+@import url("//fonts.googleapis.com/css?family=Ubuntu");
