--- a/css/navbar_transition.css
+++ b/css/navbar_transition.css
@@ -48,28 +48,40 @@
   color: white;
   margin: 10px 5px 5px 5px;
 }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:active, .navbar-default .navbar-nav > li > a:focus {
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:active,
+.navbar-default .navbar-nav > li > a:focus {
   color: #C57ED3;
   border: 1px solid #C57ED3;
 }
+
 .navbar-default .navbar-nav > li > a:visited {
   color: #C57ED3;
   text-decoration: none;
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
   color: #C57ED3;
 }
+
 .navbar-default .navbar-toggle {
   border-color: #C57ED3;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
   background-color: #490D40;
 }
+
 .navbar-default .navbar-toggle .icon-bar {
   color: #C57ED3;
   background-color: #C57ED3;
 }
+
 .navbar-default .navbar-collapse.collapse.in ul {
   background-color: #490D40;
 }
@@ -80,10 +92,12 @@
   transition: background-color 1s ease 0s;
   box-shadow: 0 0 4px grey;
 }
+
 .navbar.solid .navbar-brand {
   color: #C57ED3;
   transition: color 1s ease 0s;
 }
+
 .navbar.solid .navbar-nav > li > a {
   color: #C57ED3;
   transition: color 1s ease 0s;
