--- a/html.html.twig
+++ b/html.html.twig
@@ -64,8 +64,8 @@
 
 
 
-    {{ attach_library('drupal8_bootstrap_subtheme/animate_css') }}
-    {{ attach_library('drupal8_bootstrap_subtheme/wow_js') }}
+    {# attach_library('drupal8_bootstrap_subtheme/animate_css') #}
+    {# attach_library('drupal8_bootstrap_subtheme/wow_js') #}
 
 
     {% if html_attributes['dir'] == 'ltr' %}
