--- a/css/fonts.css
+++ b/css/fonts.css
@@ -64,7 +64,7 @@
 
 /*    google English fonts
 
-You Can Check by
+You Can Check the font in
 https://google-webfonts-helper.herokuapp.com/fonts
 
  */
