--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -177,7 +177,7 @@
 
 {% if page.footer %}
   {% block footer %}
-    <footer class="footer fixed-bottom {{ container }} wow slideInUp" role="contentinfo">
+    <footer class="footer navbar-fixed-bottom {{ container }} wow slideInUp" role="contentinfo">
       {{ page.footer }}
     </footer>
   {% endblock %}
