--- a/page.html.twig
+++ b/page.html.twig
@@ -175,7 +175,7 @@
 
 {% if page.footer %}
   {% block footer %}
-    <footer class="footer fixed-bottom {{ container }} wow slideInUp" role="contentinfo">
+    <footer class="footer navbar-fixed-bottom {{ container }} wow slideInUp" role="contentinfo">
       {{ page.footer }}
     </footer>
   {% endblock %}
