--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ visibility: hidden;
 /* HTML */
 
 body {
-background-color: #ffff;
+background-color: #fff;
 font-style: normal;
 font-weight: normal;
 font-size: medium;
